# idf-extra-components

./: .astyle_rules.yml  .build-test-rules.yml  .check_copyright_config.yaml  .codespellrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .idf_build_apps.toml  .ignore_build_warnings.txt  .pre-commit-config.yaml  README.md  conftest.py  pytest.ini
argtable3/: .build-test-rules.yml  CMakeLists.txt  LICENSE  README.md  idf_component.yml  sbom_argtable3.yml
argtable3/test_apps/: pytest_argtable3.py  pytest_expat.py
bdc_motor/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
bdc_motor/src/: bdc_motor_mcpwm_impl.c
bdc_motor/test_apps/: CMakeLists.txt
blemesh_manager/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
blemesh_manager/include/: blemesh_manager.h
blemesh_manager/src/: blemesh_configurator.c  blemesh_dispatcher.c  blemesh_heartbeat.c  blemesh_initial_sync.c  blemesh_internal.h  blemesh_manager.c  blemesh_node_directory.c  blemesh_pending_confirm.c  blemesh_prov_task.c  blemesh_provisioner.c  blemesh_publication_rx.c
blemesh_manager/test_apps/: CMakeLists.txt  pytest_blemesh_manager.py  sdkconfig.defaults
canopennode/: .build-test-rules.yml  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sbom_canopennode.yml
canopennode/src/: CO_driver_esp32.c  CO_driver_target.h
catch2/: CMakeLists.txt  README.md  cmd_catch2.cpp  idf_component.yml  sbom_catch2.yml
catch2/include/: cmd_catch2.h
cbor/: CMakeLists.txt  LICENSE  README.md  idf_component.yml
cbor/test/: CMakeLists.txt  test.c
ccomp_timer/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  ccomp_timer.c  ccomp_timer_impl_riscv.c  ccomp_timer_impl_xtensa.c  idf_component.yml
ccomp_timer/include/: ccomp_timer.h
ccomp_timer/private_include/: ccomp_timer_impl.h
ccomp_timer/test/: CMakeLists.txt  ccomp_timer_test_api.c
ccomp_timer/test_apps/: CMakeLists.txt  pytest_ccomp_timer.py
ccronexpr/: CMakeLists.txt  Kconfig  LICENSE.txt  README.md  idf_component.yml
coap/: CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  sbom.yml  sbom_libcoap.yml  sdkconfig.rename
coap/port/: coap_mbedtls.c
coremark/: .build-test-rules.yml  CMakeLists.txt  README.md  idf_component.yml  linker.lf  linker.lf.in
coremark/port/: core_portme.c  core_portme.h.in
download_file/: CMakeLists.txt  download_file.c  idf_component.yml
download_file/include/: download_file.h
eigen/: CMakeLists.txt  README.md  idf_component.yml
esp_canopennode/: CMakeLists.txt  README.md  idf_component.yml
esp_canopennode/src/: CO_driver_esp32.c  CO_driver_target.h
esp_commands/: .build-test-rules.yml  CMakeLists.txt  README.md  esp_commands.c  esp_commands_helpers.c  esp_dynamic_commands.c  idf_component.yml  linker.lf  sbom_esp_commands.yml
esp_commands/include/: esp_commands.h  esp_commands_utils.h
esp_commands/linux/: esp_commands.ld
esp_commands/private_include/: esp_commands_helpers.h  esp_commands_internal.h  esp_dynamic_commands.h
esp_commands/src/: esp_cli_commands.c  esp_commands.c  esp_commands_helpers.c  esp_dynamic_commands.c
esp_commands/test_apps/: CMakeLists.txt  pytest_esp_commands.py
esp_encrypted_img/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  project_include.cmake
esp_encrypted_img/include/: esp_encrypted_img.h
esp_encrypted_img/pre_encrypted_ota/: pytest_pre_encrypted_ota.py
esp_encrypted_img/private_include/: esp_encrypted_img_priv.h  esp_encrypted_img_utilities.h
esp_encrypted_img/src/: esp_encrypted_img.c  esp_encrypted_img_utilities.c
esp_encrypted_img/test/: CMakeLists.txt  test.c
esp_encrypted_img/test_apps/: CMakeLists.txt  partitions.csv  pytest_esp_encrypted_img.py  sdkconfig.ci.ds_peripheral  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
esp_encrypted_img/tools/: esp_enc_img_gen.py
esp_ext_part_tables/: .build-test-rules.yml  CMakeLists.txt  README.md  idf_component.yml
esp_ext_part_tables/include/: esp_ext_part_tables.h  esp_mbr.h  esp_mbr_utils.h
esp_ext_part_tables/src/: esp_ext_part_tables.c  esp_mbr.c  esp_mbr_utils.c
esp_ext_part_tables/test_apps/: CMakeLists.txt  pytest_esp_ext_part_tables.py  sdkconfig.defaults
esp_flash_dispatcher/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  esp_flash_dispatcher.c  idf_component.yml
esp_flash_dispatcher/include/: esp_flash_dispatcher.h
esp_flash_dispatcher/test_apps/: CMakeLists.txt  README.md  partitions.csv  pytest_flash_dispatcher.py  sdkconfig.ci.c5_120m_120m_160m  sdkconfig.defaults
esp_foc/: CMakeLists.txt  Kconfig  LICENSE  README.md  esp_foc.c  esp_foc_consts.c  idf_component.yml
esp_foc/drivers/: current_sensor_adc.c  inverter_3pwm_ledc.c  os_interface.c  (+2 more)
esp_gcov/: CMakeLists.txt  Kconfig  README.md  esp_gcov.h  gcov_rtio.c  idf_component.yml  project_include.cmake  sdkconfig.rename
esp_isotp/: CMakeLists.txt  Kconfig  LICENSE  README.md  esp_isotp.c  esp_isotp.h  idf_component.yml  pytest.ini
esp_jpeg/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  jpeg_decoder.c  jpeg_default_huffman_table.c
esp_linenoise/: .build-test-rules.yml  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  sbom_esp_linenoise.yml
esp_nand_ubi/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp_sccb_intf/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp_schedule/: .build-test-rules.yml  CMakeLists.txt  Kconfig  README.md  esp_schedule_variables.cmake  idf_component.yml
esp_serial_slave_link/: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  api.md  essl_sdio.c  essl_sdio_defs.c  essl_spi.c  idf_component.yml
esp_sysview/: .build-test-rules.yml  CMakeLists.txt  Kconfig  README.md  idf_component.yml  linker.lf  linker.lf.in  sdkconfig.rename
freetype/: CMakeLists.txt  LICENSE  README.md  idf_component.yml  sbom_freetype.yml
iklib/: .build-test-rules.yml  CMakeLists.txt  README.md  idf_component.yml  sbom_iklib.yml
iqmath/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml
(+1538 files in other folders)
