idf_component_register(SRCS
                        "linenoise/linenoise.c"
                        "src/esp_linenoise.c"
                       PRIV_INCLUDE_DIRS
                        "private_include"
                       INCLUDE_DIRS
                        "include"
                        "."
)

